@@ -1,3 +1,10 @@
+2007-09-07  Geoffrey Garen  <ggaren@apple.com>
+
+        Build fix.
+
+        * WebView/WebView.mm:
+        (+[WebView _setCacheModel:]):
+
 2007-09-05  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Darin Adler, Maciej Stachowiak, Mark Rowe, Tim Hatcher.
